#
#     /\_____/\
#    /  o   o  \
#   ( ==  ^  == )
#    )         (
#   (           )
#  ( (  )   (  ) )
# (__(__)___(__)__)
#
[tool.poetry]
name        = "snntorch"
version     = "0.9.1"
description = "Deep and online learning with spiking neural networks in Python."
license     = "MIT License"
authors     = [
    "PKU MLG, PCL, and other contributors",
]
packages = [
    {include="snntorch"},
]
include  = []
exclude  = []

[tool.black]
line-length = 79

[tool.poetry.dependencies]
nir       = "*"
nirtorch  = "*"

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
